updates to research and about pages

--- a/misc/_posts/2022-10-09-research.md
+++ b/misc/_posts/2022-10-09-research.md
@@ -45,33 +45,25 @@ The topic of the knowledge evolution is to combine artificial intelligence, the 
   - Edge-cloud collaborative environments for carbon-performance trade-off optimization
   - Real-time monitoring and reduction techniques for carbon footprints during AI model training and inference
 
+## Improving your academic talk 
 
-### Application areas
-We are expanding existing application domains to include *knowledge*-driven management and optimization systems in diverse fields:
-1. Smart Grid and Energy Management Systems
-- Smart grids, microgrids, energy management systems
-- Virtual power plants, electric vehicle charging optimization
-- Digital twin of energy infrastructure for predictive control
-- Carbon-intelligent workload migration and scheduling
+데이터 사이언스 실험실의 주요 목적 중의 하나는 지식과 아이디어를 전달하기 위한 여러분의 academic talk 활동을 향상시키는 것입니다. 국내외 전문가를 위한 Academic talk는 다음과 같은 요소를 시간과 장소에 따라 적절하게 포함되어야 합니다.
+- Title:  This is the first item somebody will check if your talk is worth their while. A title should be short and still capture the essence of your presentation. Detailed presentation can be expressed in a subtitle. 
+- Abstract: People interested in your title will read your abstract to figure out if your talk is worthwhile. Therefore the abstract needs to be well crafted, interesting and to the point. It should include the following information:
+  1. Introduction: What is the underlying problem? Characterize the state of the art.
+  2. Motivation: What are the challenges? What makes it worthwhile for people to listen to you?
+  3. Sketch Results: What is the core of your solution idea? Quantitative results?
+  4. Conclusion: What is your conclusion? (Is the problem solved?)
+- Your biography: potential listeners will want to know if the person is experienced in the field and has something interesting to say. Your biography should capture this information.
 
-2. Manufacturing and Quality Control
-- 3D coordinate measuring machine data analysis for precision inspection
-- Manufacturing process monitoring and optimization
-- Digital twin integration for shop-floor visualization and predictive maintenance
-- Anomaly detection in manufacturing robots and processes
+Source: [Stepan Decker](https://www.stefandecker.org/for-students-and-staff/how-to-announce-an-academic-talk)의 How to announce academic talk 
 
-3. Real-Time Environmental Monitoring
-- Real-time air pollution and emission monitoring (e.g., TMS systems)
-- Digital carbon emission tracking and reporting
-- Light pollution monitoring and analysis using multimodal data
-- Environmental digital twins for urban sustainability management
 
-4. Knowledge Tracing
-- Learner modeling and knowledge tracing using multimodal data
-- Microlearning module design and short-form educational video personalization
+## What is hot topics in Data science
+- the whole lifecycle of the data from the past to the present and the future
+- the analytics from explicit (known) analytics and reactive understanding to implicit  (unknown) analytics and proactive early prediction and intervention
+- the journey from data exploration (by descriptive and predictive analytics) to the delivery of actionable insights and decisions through prescriptive analytics and actionable knowledge delivery
 
-5. Digital Twin-enhanced Robotics and Automation
-- Integration of manufacturing robots with digital twins for real-time monitoring
-- Robot-assisted microlearning environments for skill training
-- Anomaly detection in robot operations using multimodal sensor data
-- Energy-efficient robot scheduling and workload optimization using carbon-aware computing
+
+## Source code
+This site is based on the [Bedford lab](https://bedford.io/) website, which makes available the codes from their site in GitHub. In that site there is a good description of how it works and a list of derived sites, such as ours.
