--- a/misc/_posts/2022-10-10-about.md
+++ b/misc/_posts/2022-10-10-about.md
@@ -6,32 +6,77 @@ permalink: /about/
 
 ## What is Data Science
 
-**Data science** combines math and statistics, specialized programming, advanced analytics, artificial intelligence (AI), and machine learning with specific subject matter expertise to uncover actionable insights hidden in an organization's data. These insights can be used to guide decision-making and strategic planning.
-from `IBM 'What is Data Science'`
+Data science is a discipline that integrates statistics, informatics, computing, communication, and artificial intelligence to transform raw data into structured knowledge.  
+Its purpose is not only to analyze information, but to build systems that **understand, reason, and make decisions** based on real-world contexts.
 
-**Data science** = statstics + informatics + computing + communication + sociology + management | data + environment + thinking (Data Science: A Comprehensive Overview, ACM Computing Surveys, 2017)  
+Data Science = data + environment + structured knowledge + decision-making  
+Data Product = knowledge-driven system that produces measurable impact
 
-**Data product** is the output of data science
+## The goal of our research
+Data Science Lab.은 하나의 중심 목표에 집중합니다.
 
-## Improving your academic talk 
+# **Knowledge-Driven Recommendation Systems**
+지식을 중심으로 데이터를 해석하고, 의미를 이해하며, 실제 환경에 적용 가능한 AI 시스템을 구축하는 것.
 
-데이터 사이언스 실험실의 주요 목적 중의 하나는 지식과 아이디어를 전달하기 위한 여러분의 academic talk 활동을 향상시키는 것입니다. 국내외 전문가를 위한 Academic talk는 다음과 같은 요소를 시간과 장소에 따라 적절하게 포함되어야 합니다.
-- Title:  This is the first item somebody will check if your talk is worth their while. A title should be short and still capture the essence of your presentation. Detailed presentation can be expressed in a subtitle. 
-- Abstract: People interested in your title will read your abstract to figure out if your talk is worthwhile. Therefore the abstract needs to be well crafted, interesting and to the point. It should include the following information:
-  1. Introduction: What is the underlying problem? Characterize the state of the art.
-  2. Motivation: What are the challenges? What makes it worthwhile for people to listen to you?
-  3. Sketch Results: What is the core of your solution idea? Quantitative results?
-  4. Conclusion: What is your conclusion? (Is the problem solved?)
-- Your biography: potential listeners will want to know if the person is experienced in the field and has something interesting to say. Your biography should capture this information.
-
-Source: [Stepan Decker](https://www.stefandecker.org/for-students-and-staff/how-to-announce-an-academic-talk)의 How to announce academic talk 
+이를 위해 모델링, 추론, 추천, 최적화, 운영 자동화에 이르는 전 과정을 다루며  
+데이터 → 정보 → 지식 → 의사결정 → 실행까지 이어지는 **지식 순환 시스템**을 설계합니다.
 
 
-## What is hot topics in Data science
-- the whole lifecycle of the data from the past to the present and the future
-- the analytics from explicit (known) analytics and reactive understanding to implicit  (unknown) analytics and proactive early prediction and intervention
-- the journey from data exploration (by descriptive and predictive analytics) to the delivery of actionable insights and decisions through prescriptive analytics and actionable knowledge delivery
+---
+
+## Recommendation System
+추천은 단순한 목록 제공이 아니라,  
+사용자·콘텐츠·상황의 관계를 이해하여 **지식 기반 의사결정 지원 시스템**을 구축하는 과정으로 정의합니다.
+
+- 의미 기반 추천: 개념·관계·맥락을 고려한 의사결정
+- 연속 추천: 시간 변화·학습 경로를 고려한 흐름 중심 추천
+- 사용자 상태 모델링: 목표·패턴·선호의 진화 반영
+- 설명 가능한 추천: 결과가 아닌 근거가 전달되는 시스템
+- 서비스 지향 구조: 추천 → 행동 → 피드백 → 재학습 구조화
+
+추천 시스템은 독립된 기술이 아니라,  
+**지식을 활용하는 서비스 아키텍처**로서 연구됩니다.
 
 
-## Source code
-This site is based on the [Bedford lab](https://bedford.io/) website, which makes available the codes from their site in GitHub. In that site there is a good description of how it works and a list of derived sites, such as ours.
+---
+
+## Knowledge Engineering
+Knowledge Engineering은 데이터가 시스템 안에서 **지식으로 성장하는 과정** 전체를 다룹니다.
+
+### 핵심 구성
+1. **Semantic Understanding**
+   - 텍스트·표·센서·공간 데이터의 구조화 및 의미 연결
+   - 관계·속성·역할에 기반한 표현과 해석
+
+2. **Knowledge Graph Reasoning**
+   - 실세계 개체, 사건, 행위자 간의 의미적 연결
+   - 관계 기반 추론을 통한 의사결정 보조
+
+3. **Operational AI Systems**
+   - 의사결정 자동화, 자원 배치, 시뮬레이션 기반 최적화
+   - 실세계 운영 환경에서 작동하는 시스템 관점
+
+4. **Feedback-Driven Evolution**
+   - 사용·측정·오류·수정이 반복되며 모델과 지식이 확장
+   - AI가 "정적 모델"이 아닌 "진화하는 구조"로 존재
+
+
+---
+
+## Application areas (within one unified theme)
+아래 모든 분야는 별개의 연구가 아니라,  
+**Knowledge-Driven AI System**의 단일 관점 아래에서 해석됩니다.
+
+| 분야 | 시스템적 목표 |
+|------|----------------|
+| Smart Grid / Energy | 지식 기반 운영·에너지 최적화·자원 배치 의사결정 |
+| Manufacturing / Quality | 공정 지식화·이상 탐지·디지털 트윈 기반 모니터링 |
+| Urban / Spatial Data | 도시 개체 관계 구조화·위치 기반 의사결정 시스템 |
+| Education Intelligence | 학습자 상태·개념 진화·연속 학습 경로 추천 |
+| Robotics / Automation | 지식 기반 행동 선택·업무 스케줄링·운영 최적화 |
+
+이 다섯 분야는 하나의 메시지로 귀결됩니다.
+
+> **“데이터를 지식으로, 지식을 실행 가능한 시스템으로.”**
+
+---
