--- a/misc/_posts/2022-10-10-about.md
+++ b/misc/_posts/2022-10-10-about.md
@@ -17,7 +17,7 @@ Data Science Lab.은 하나의 중심 목표에 집중합니다.
 
 ![Knowledge-Driven AI Systems](about_dsl.png)
 
-# **Knowledge-Driven AI Systems**
+## **Knowledge-Driven AI Systems**
 지식을 중심으로 데이터를 해석하고, 의미를 이해하며, 실제 환경에 적용 가능한 AI 시스템을 구축하는 것.
 
 이를 위해 모델링, 추론, 추천, 최적화, 운영 자동화에 이르는 전 과정을 다루며  
@@ -26,41 +26,41 @@ Data Science Lab.은 하나의 중심 목표에 집중합니다.
 
 ---
 
-## Recommendation System
-추천은 단순한 목록 제공이 아니라,  
-사용자·콘텐츠·상황의 관계를 이해하여 **지식 기반 의사결정 지원 시스템**을 구축하는 과정으로 정의합니다.
+### 핵심 구성
+1. **Semantic Recommendation**  
+   개념·관계·맥락 정보를 고려한 의미 기반 의사결정 모델링
+2. **Continuous & Contextual Flow**  
+   시간 변화·상태 전이·학습 경로를 반영하는 흐름 중심 추천
+3. **User State Modeling**  
+   목표, 선호, 패턴의 동적 변화를 고려한 사용자 상태 추론
+4. **Explainable Decision**  
+   추천 결과가 아닌 추천 근거를 전달하는 설명 가능한 구조
+5. **Service-Oriented Feedback Loop**  
+   추천 → 행동 → 피드백 → 재학습이 순환하는 서비스 운영 관점
 
-- 의미 기반 추천: 개념·관계·맥락을 고려한 의사결정
-- 연속 추천: 시간 변화·학습 경로를 고려한 흐름 중심 추천
-- 사용자 상태 모델링: 목표·패턴·선호의 진화 반영
-- 설명 가능한 추천: 결과가 아닌 근거가 전달되는 시스템
-- 서비스 지향 구조: 추천 → 행동 → 피드백 → 재학습 구조화
-
-추천 시스템은 독립된 기술이 아니라,  
-**지식을 활용하는 서비스 아키텍처**로서 연구됩니다.
+추천 시스템은 독립 기술이 아니라,  
+**지식을 구조화하고 활용하는 서비스 운영 아키텍처의 구성 요소**로 연구됩니다.
 
 
 ---
 
 ## Knowledge Engineering
-Knowledge Engineering은 데이터가 시스템 안에서 **지식으로 성장하는 과정** 전체를 다룹니다.
+Knowledge Engineering은 데이터가 시스템 내부에서  
+**의미 부여 → 구조화 → 추론 → 실행 → 진화** 과정을 거치며  
+지식으로 성장하는 전주기를 설계·운영하는 영역입니다.
 
 ### 핵심 구성
-1. **Semantic Understanding**
-   - 텍스트·표·센서·공간 데이터의 구조화 및 의미 연결
-   - 관계·속성·역할에 기반한 표현과 해석
+1. **Semantic Understanding**  
+   텍스트·표·센서·공간 데이터를 개체·관계 단위로 구조화하고 의미 연결
+2. **Knowledge Graph Reasoning**  
+   관계 기반 추론을 통해 의사결정 보조 및 결과 해석 지원
+3. **Operational AI Systems**  
+   자원 배치, 정책 선택, 전략 실행 등 실환경 적용이 가능한 운영형 AI
+4. **Feedback-Driven Evolution**  
+   사용·측정·오류·수정이 반복되며 지식과 모델이 순환적으로 성장
 
-2. **Knowledge Graph Reasoning**
-   - 실세계 개체, 사건, 행위자 간의 의미적 연결
-   - 관계 기반 추론을 통한 의사결정 보조
-
-3. **Operational AI Systems**
-   - 의사결정 자동화, 자원 배치, 시뮬레이션 기반 최적화
-   - 실세계 운영 환경에서 작동하는 시스템 관점
-
-4. **Feedback-Driven Evolution**
-   - 사용·측정·오류·수정이 반복되며 모델과 지식이 확장
-   - AI가 "정적 모델"이 아닌 "진화하는 구조"로 존재
+Knowledge Engineering은 정적 지식 설계가 아니라,  
+**실환경에서 작동하고 피드백을 통해 진화하는 지식 시스템 구축**을 목표로 합니다.
 
 
 ---
