update research and about pages

--- a/misc/_posts/2022-10-10-about.md
+++ b/misc/_posts/2022-10-10-about.md
@@ -12,55 +12,56 @@ Its purpose is not only to analyze information, but to build systems that **unde
 Data Science = data + environment + structured knowledge + decision-making  
 Data Product = knowledge-driven system that produces measurable impact
 
-## The goal of our research
-Data Science Lab.은 하나의 중심 목표에 집중합니다.
+# Knowledge-Driven AI Systems
+데이터를 의미로 전환하고, 의미를 지식으로 구조화하며,  
+지식을 운영 가능한 의사결정 체계로 연결하는 AI 시스템 패러다임입니다.  
+데이터 → 정보 → 지식 → 의사결정 → 실행으로 이어지는 순환 구조를 기반으로 합니다.
 
 ![Knowledge-Driven AI Systems](about_dsl.png)
 
-## **Knowledge-Driven AI Systems**
-지식을 중심으로 데이터를 해석하고, 의미를 이해하며, 실제 환경에 적용 가능한 AI 시스템을 구축하는 것.
-
-이를 위해 모델링, 추론, 추천, 최적화, 운영 자동화에 이르는 전 과정을 다루며  
-데이터 → 정보 → 지식 → 의사결정 → 실행까지 이어지는 **지식 순환 시스템**을 설계합니다.
-
-
 ---
 
-### 핵심 구성
+## 1. Recommendation System
+지식을 중심으로 데이터를 해석하고, 의미 기반으로 사용자·콘텐츠·상황을 연결하여  
+**의사결정을 지원하는 서비스 운영 아키텍처**를 구축하는 영역입니다.
+
+### 1.1 Overview
+- 단순 결과 출력이 아니라 지식 기반 의사결정 지원 구조
+- 추천 → 행동 → 피드백 → 재학습으로 이어지는 순환 시스템
+- 독립 기능이 아니라 운영 아키텍처의 한 구성 요소
+
+### 1.2 Core Components
 1. **Semantic Recommendation**  
-   개념·관계·맥락 정보를 고려한 의미 기반 의사결정 모델링
+   개념·관계·맥락 단위 의미 모델링
 2. **Continuous & Contextual Flow**  
-   시간 변화·상태 전이·학습 경로를 반영하는 흐름 중심 추천
+   시간·상태·경로 기반 흐름 중심 추천
 3. **User State Modeling**  
-   목표, 선호, 패턴의 동적 변화를 고려한 사용자 상태 추론
+   목표/패턴/선호 변화에 따른 사용자 상태 추론
 4. **Explainable Decision**  
-   추천 결과가 아닌 추천 근거를 전달하는 설명 가능한 구조
+   결과가 아닌 “근거”를 제공하는 설명 가능한 추천
 5. **Service-Oriented Feedback Loop**  
-   추천 → 행동 → 피드백 → 재학습이 순환하는 서비스 운영 관점
-
-추천 시스템은 독립 기술이 아니라,  
-**지식을 구조화하고 활용하는 서비스 운영 아키텍처의 구성 요소**로 연구됩니다.
-
+   추천 → 행동 → 관찰 → 수정 → 재학습의 서비스 순환 구조
 
 ---
 
-## Knowledge Engineering
-Knowledge Engineering은 데이터가 시스템 내부에서  
-**의미 부여 → 구조화 → 추론 → 실행 → 진화** 과정을 거치며  
-지식으로 성장하는 전주기를 설계·운영하는 영역입니다.
+## 2. Knowledge Engineering
+데이터가 시스템 내부에서  
+**의미 부여 → 구조화 → 추론 → 실행 → 진화**로 성장하는 전주기를 설계하는 영역입니다.
 
-### 핵심 구성
+### 2.1 Overview
+- 정적 저장이 아닌 “성장하는 지식”을 다루는 접근
+- 데이터/의미/추론/운영/피드백의 통합 설계
+- 운영 가능한 지식 시스템 구현에 초점
+
+### 2.2 Core Components
 1. **Semantic Understanding**  
-   텍스트·표·센서·공간 데이터를 개체·관계 단위로 구조화하고 의미 연결
+   텍스트·표·센서·공간 데이터 의미 연결 및 구조화
 2. **Knowledge Graph Reasoning**  
-   관계 기반 추론을 통해 의사결정 보조 및 결과 해석 지원
+   관계 기반 추론을 통한 의사결정 보조
 3. **Operational AI Systems**  
-   자원 배치, 정책 선택, 전략 실행 등 실환경 적용이 가능한 운영형 AI
+   전략·정책·자원 배치가 가능한 운영형 AI 구조
 4. **Feedback-Driven Evolution**  
-   사용·측정·오류·수정이 반복되며 지식과 모델이 순환적으로 성장
-
-Knowledge Engineering은 정적 지식 설계가 아니라,  
-**실환경에서 작동하고 피드백을 통해 진화하는 지식 시스템 구축**을 목표로 합니다.
+   사용과 관찰을 통한 모델 및 지식의 순환적 확장
 
 
 ---
