--- a/misc/_posts/2022-10-10-about.md
+++ b/misc/_posts/2022-10-10-about.md
@@ -17,7 +17,7 @@ Data Product = knowledge-driven system that produces measurable impact
 지식을 운영 가능한 의사결정 체계로 연결하는 AI 시스템 패러다임입니다.  
 데이터 → 정보 → 지식 → 의사결정 → 실행으로 이어지는 순환 구조를 기반으로 합니다.
 
-![Knowledge-Driven AI Systems](about_dsl.png)
+<img src="/images/about_dsl.png" style="height: 60px;"></a>
 
 ---
 
