--- a/blog/_posts/2025-12-10-PBL-우수과제선정.md
+++ b/blog/_posts/2025-12-10-PBL-우수과제선정.md
@@ -1,6 +1,6 @@
 ---
 layout: post 
-title: 2025년 데이터산업분야 지산학연협력 교과개설 및 PBL 지원 우수 과제 선정
+title: 2025년 데이터산업분야 지산학연협력 PBL 우수 과제 선정
 description: 2025년 데이터산업분야 지산학연협력 교과개설 및 PBL 지원 우수 과제 선정
 thumb: /images/blog/2025-12-10-PBL-우수과제선정.jpg
 author: DSL-Media
@@ -14,4 +14,4 @@ author: DSL-Media
 
 ### 수상소식 알림
 
-부산테크노파크에서 주관하는 2025년 데이터산업분야 지산학연협력 교과개설 및 PBL 지원 과제에 우수 과제로 선정되어 부산시장상을 수상했습니다. 본 과제는 천세진 교수님의 지도 아래 석사과정생과 학부 연구생들이 참여하고, 기업과 협력하여 수행한 연계 프로젝트 입니다.
+부산테크노파크에서 주관하는 2025년 데이터산업분야 지산학연협력 Project-Based Learning(PBL) 과제에 대표성과 우수과제로 선정되어 부산시장상을 수상했습니다. 본 과제는 천세진 교수님의 지도 아래 대학원생과 학부 연구생들이 참여하고, 참여 기업과 협력하여 PBL 및 인턴쉽을 수행한 지산학협력 프로젝트 입니다.
