update blog posts for November 2025

--- a/blog/_posts/2025-11-14-2025-멀티미디어학회.md
+++ b/blog/_posts/2025-11-14-2025-멀티미디어학회.md
@@ -21,7 +21,7 @@ author: DSL-Media
 ### 세부 내용
 
 
-부산대학교 조형관에서 개최된 한국멀티미디어학회 춘계학술대회에 참가하였습니다. 이번 학술대회에서 본 연구실의 김태희, 김아영, 김법기, 임성택, 김건한 학생들이 논문을 발표하며 주목을 받았다.
+부산대학교에서 개최된 한국멀티미디어학회 춘계학술대회에 참가하였습니다. 이번 학술대회에서 본 연구실의 김태희, 김아영, 김법기, 임성택, 김건한 학생들이 논문을 발표하며 주목을 받았다.
 발표한 논문의 제목은 다음과 같습니다.
 - 한국어 교육 영상에서의 멀티모달 Co-Attention 기반 Topic Segmentation 모델 설계 / [LINK](https://www.datasciencelabs.org/papers/kmms2025-fall-Multimodal-Co-Attention-Model-Design-for-Topic-Segmentation-in-Korean-Educational-Videos/)
 - 한국어 문서로부터 표 구조 인식을 위한 Transformer 기반 모델 설계 / [LINK](https://www.datasciencelabs.org/papers/kmms2025-fall-Designing-A-Transformer-Based-Model-for-Understanding-Table-Structure-Recognition-in-Korean-Documents/)
