--- a/blog/_posts/2025-11-19-이노베이션스퀘어 성과공유회.md
+++ b/blog/_posts/2025-11-19-이노베이션스퀘어 성과공유회.md
@@ -1,7 +1,7 @@
 ---
 layout: post 
-title: 2025년 동남권 ICT 이노베이션스퀘어 우사사례 및 우수수료생 선발
-description: 2025년 동남권 ICT 이노베이션스퀘어 우사사례 및 우수수료생 선발
+title: 2025년 동남권 ICT 이노베이션스퀘어 우수사례 및 우수수료생 선정
+description: 2025년 동남권 ICT 이노베이션스퀘어 우사사례 및 우수수료생 선정
 thumb: /images/blog/2025-11-19-성과공유회.png
 author: DSL-Media
 ---
@@ -12,7 +12,7 @@ author: DSL-Media
 </figure>
 </div>
 
-### 수상소식 알림
+### 소식 알림
 
-2025 전국 ICT이노베이션스퀘어가 모여 각 권역별 우수자를 시상하는 자리에서 연구실의 박정현(석사과정), 김재경(3학년) 학생이 각각 부산정보산업진흥원 원장상과 과학기술정보통신부 장관상을 수상했습니다.
+2025 전국 ICT이노베이션스퀘어가 모여 각 권역별 우수자를 시상하는 자리에서 연구실의 박정현(석사과정), 김재경(컴퓨터공학과 3학년) 학생이 부산정보산업진흥원 원장상과 과학기술정보통신부 장관상을 각각 수상했습니다.
 
