Update news article link in PBL project post

--- a/blog/_posts/2025-12-10-PBL-우수과제선정.md
+++ b/blog/_posts/2025-12-10-PBL-우수과제선정.md
@@ -20,4 +20,4 @@ author: DSL-Media
 
 - [국제신문-동아대 컴퓨터공학과 학생들, ‘2025년 지산학협력 PBL 지원사업’ 부산시장상 수상](https://www.kookje.co.kr/news2011/asp/newsbody.asp?code=00&key=20260107.99099001604)
 - [교수신문-동아대 컴퓨터공학과 학생들, ‘2025년 지산학협력 PBL 지원사업’부산시장상 수상](https://www.kyosu.net/news/articleView.html?idxno=154400)
-- [동아신문-동아대 컴퓨터공학과 학생들, ‘2025년 지산학협력 PBL 지원사업’부산시장상 수상](https://donga.ac.kr/kor/CMS/Board/Board.do?mcode=&mCode=MN044&searchID=sch001&searchKeyword=PBL&searchCategory=&mgr_seq=54&mode=view&mgr_seq=54&board_seq=8416376)
+- [동아뉴스-동아대 컴퓨터공학과 학생들, ‘2025년 지산학협력 PBL 지원사업’부산시장상 수상](https://donga.ac.kr/kor/CMS/Board/Board.do?mcode=&mCode=MN044&searchID=sch001&searchKeyword=PBL&searchCategory=&mgr_seq=54&mode=view&mgr_seq=54&board_seq=8416376)
